<resources>
    <string name="app_name">Guianica</string>
    <string name="text_btn_share_detail_offer">compartir</string>
    <string name="text_bar_operation_company_open">Abierto</string>
    <string name="text_bar_operation_company_closes">Cerrado</string>
    <string name="text_bar_operation_company_delivery">Delivery</string>
    <string name="text_about_slide_title_one">¡Gracias por descargarme!</string>
    <string name="text_about_slide_description_one">Soy una guia digital dónde encontrarás información de contacto y ofertas de distintos negocios comerciales.</string>
    <string name="text_about_slide_title_two">Encuentra los negocios comerciales entre las distintas categorías.</string>
    <string name="text_about_slide_description_two">Destro del resultado de busqueda podrás filtrar los negocios por su especialidad para encontar el que más se adapte a tu necesidad.</string>
    <string name="text_about_slide_title_three">No te preocupes, funciono sin conexión a internet.</string>
    <string name="text_about_slide_description_three">En cada perfil de los distintos negocios podrás guardar su información de contácto si asi lo deseas para esos días en el que te encuentre viajando por espacio intergaláctico.</string>
    <string name="text_sign_in">Inicia sesión con Google</string>
    <string name="text_privacy_policy_auth">Al registrarte, aceptas la <![CDATA[ <a href="#">política de privacidad</a>]]> de Guianica.</string>
    <string name="text_privacy_policy">Política de privacidad</string>
    <string name="privacy_policy_key">papgn</string>
    <string name="privacy_policy_state_key">ppsk</string>
    <string name="commercial_int_key">cmmi</string>
    <string name="last_commercial_int_key">cmmky</string>
    <string name="text_button_fragment_confirm">Continuar</string>
    <string name="text_hints_search_main_activity">Buscar&#8230;</string>
    <string name="text_description_fragment_confirm">El registro se ha completado con exito, puedes darle continuar para disfrutar del contenido de Guianica.</string>
    <string name="text_load_data_user_fragment_confirm">Estamos guardando tu perfil, espera un momento.</string>
    <string name="text_description_offer">Aprovecha todas las ofertas de este mes que tenemos para tí con mucho amor.</string>
    <string name="text_description_results">Hemos encontrado %1$d negocios en esta categoría, puedes filtarlos según su especialidad.</string>
    <string name="text_schedule_company_activity_result">Abierto de %1$s a %2$s</string>
    <string name="text_template_tooltip">%1$s disponibles</string>
    <string name="text_template_tooltip_commercial">%1$s / %2$s</string>


    <!-- LOREM IPSUM -->
    <string name="lorem_title_small">Lorem ipsum</string>
    <string name="lorem_description_small">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="lorem_description_medium">Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

    <!-- ERROR MESSAGES -->
    <string name="text_app_error">Ha ocurrido un error, Intentalo de nuevo.</string>
    <string name="text_app_error_auth">Fallo de Autenticación.</string>
    <string name="text_app_error_privacy_policy">Revisa la politica de privacidad antes de iniciar.</string>
    <string name="text_app_error_sing_in_google">El inicio con Google falló, Intentalo de nuevo.</string>

    <!-- IMAGE VIEW CONTENT DESCRIPTION -->
    <string name="logo_content_description">Logo</string>
    <string name="banner_content_description">Banner</string>

    <!-- TITLE MENU NAVIGATION -->
    <string name="menu_title_home">Home</string>
    <string name="menu_title_discover">Discover</string>
    <string name="menu_title_favorite">Favorite</string>
    <string name="menu_title_place">Place</string>
    <string name="menu_title_user">User</string>


    <!-- TITLE HOME FRAGMENT -->
    <string name="title_offer_home_fragment">Ofertas</string>
    <string name="say_hello_home_fragment">Hola, %1$s</string>
    <string name="title_commercial_home_fragment">Anuncios</string>
    <string name="title_category_home_fragment">Categorias</string>
    <string name="title_tourist_places_home_fragment">Lugares turísticos</string>


    <!-- ACTIVITY PROFILE -->
    <string name="description_featured_products_profile_activity">Estos son algunos de nuestros productos preferidos entre la comunidad, puedes llamarnos y preguntar acerca de ellos.</string>
    <string name="title_gallery_profile_activity">Galería</string>
    <string name="title_featured_products_profile_activity">Productos destacados</string>
    <string name="title_offers_profile_activity">Ofertas</string>

    <!-- SPLASH TEXTS -->
    <string name="text_checking_connection_fragment_welcome">Comprobando conexión a a internet&#8230;</string>
    <string name="text_checking_updates_fragment_welcome">Comprobando actualizaciones&#8230;</string>

     <!-- DIALOG TEXT -->
    <string name="text_title_warning_connection_fragment_welcome">Advertencia.</string>
    <string name="text_content_warning_connection_mobile_fragment_welcome">Hola querido usuario, hemos detectado que estas usando tu internet movil para cargar la aplicación, esto puede consumir tus datos.</string>
    <string name="text_content_no_connection_fragment_welcome">No se ha detectado ninguna conexión, Guianica entrará en modo sin conexión.</string>

    <!-- DIALOG TEXT PROFILE ACTIVITY SOCIAL MEDIA-->
    <string name="text_title_social_network_activity_profile">Redes sociales</string>
    <string name="text_content_facebook_activity_profile">Quieres darle ME GUSTA a la pagina de %1$s</string>
    <string name="text_content_instagram">Quieres dale SEGUIR la pagina de %1$s</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
