<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_illustration_view_about"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:contentDescription="@string/logo_content_description"
        android:src="@drawable/ic_welcome" />

    <TextView
        android:id="@+id/title_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:ems="11"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/lorem_title_small"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/description_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:ems="12"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/lorem_description_medium"
        android:textAlignment="center"
        android:textColor="@color/colorAccentText"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>