<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_container_banner_fragment_commercial"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="7dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    tools:context=".main.CommercialFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/banner_fragment_commercial"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/company_name_fragment_commercial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/nunito_sans_bold"
            android:maxLines="2"
            android:layout_marginBottom="5dp"
            android:text="@string/lorem_title_small"
            android:layout_below="@+id/banner_fragment_commercial"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/company_description_fragment_commercial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/nunito_sans"
            android:maxLines="2"
            android:layout_marginBottom="15dp"
            android:text="@string/lorem_description_medium"
            android:layout_below="@+id/company_name_fragment_commercial"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp" />


        <ImageButton
            android:id="@+id/btn_call_fragment_commercial"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_description_fragment_commercial"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_call_profile_activity"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_call_white" />

        <TextView
            android:id="@+id/company_telephone_fragment_commercial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_description_fragment_commercial"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="3dp"
            android:ellipsize="end"
            android:fontFamily="@font/nunito_sans"
            android:maxLines="2"
            android:text="***"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>