<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/say_hello_1_offer_shimmer_home_fragment_offers"
        style="@style/LayoutLateralMargin"
        android:layout_width="70dp"
        android:layout_height="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_shimmer_text" />

    <View
        android:id="@+id/image_user"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/image_emergency"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shimmer_circle_image" />

    <View
        android:id="@+id/image_emergency"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/shimmer_circle_image" />

    <TextView
        android:id="@+id/title_offer_shimmer_home_fragment_offers"
        style="@style/TitleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_user"
        android:text="@string/title_offer_home_fragment" />


    <View
        android:id="@+id/description_1_offer_shimmer_home_fragment_offers"
        android:layout_width="270dp"
        style="@style/LayoutLateralMargin"
        android:layout_height="10dp"
        android:layout_below="@+id/title_offer_shimmer_home_fragment_offers"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_shimmer_text"  />

    <View
        android:id="@+id/description_2_offer_shimmer_home_fragment_offers"
        android:layout_width="250dp"
        android:layout_height="10dp"
        style="@style/LayoutLateralMargin"
        android:layout_marginBottom="7dp"
        android:layout_below="@+id/description_1_offer_shimmer_home_fragment_offers"
        android:background="@drawable/background_shimmer_text"  />



   <RelativeLayout android:id="@+id/recycler_1_shimmer_home_fragment_offers"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="10dp"
       android:layout_below="@+id/description_2_offer_shimmer_home_fragment_offers">

       <View
           android:id="@+id/title"
           android:layout_width="120dp"
           android:layout_height="10dp"
           android:layout_marginTop="10dp"
           android:background="@drawable/background_shimmer_text" />

       <View
           android:id="@+id/image"
           android:layout_width="150dp"
           android:layout_height="100dp"
           android:layout_marginTop="30dp"
           android:layout_marginBottom="7dp"
           android:background="@drawable/background_shimmer_text" />

       <View
           android:id="@+id/tooltip"
           android:layout_width="20dp"
           android:layout_height="20dp"
           android:layout_marginTop="5dp"
           android:layout_marginStart="10dp"
           android:layout_marginBottom="5dp"
           android:layout_toEndOf="@id/title"
           android:background="@drawable/shimmer_circle_image" />
   </RelativeLayout>

    <TextView
        android:id="@+id/title_category_home_fragment"
        style="@style/TitleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_1_shimmer_home_fragment_offers"
        android:text="@string/title_category_home_fragment" />


    <RelativeLayout android:id="@+id/recycler_2_category_home_fragment_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_category_home_fragment">

        <View
            android:id="@+id/filter_1"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginBottom="7dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_shimmer_text" />
        <View
            android:id="@+id/filter_2"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/filter_1"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_shimmer_text" />

        <View
            android:id="@+id/filter_3"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/filter_2"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_shimmer_text" />

        <View
            android:id="@+id/filter_4"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/filter_3"
            android:background="@drawable/background_shimmer_text" />

        <View
            android:id="@+id/filter_5"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/filter_4"
            android:background="@drawable/background_shimmer_text" />

        <View
            android:id="@+id/filter_6"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/filter_1"
            android:layout_marginStart="16dp"
            android:background="@drawable/background_shimmer_text" />
    </RelativeLayout>

    <TextView
        android:id="@+id/title_commercial_shimmer_home_fragment"
        style="@style/TitleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_2_category_home_fragment_category"
        android:layout_marginBottom="5dp"
        android:text="@string/title_commercial_home_fragment" />

    <View
        android:id="@+id/viewpager_1_shimmer_commercial_home_fragment"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_marginBottom="7dp"
        style="@style/LayoutLateralMargin"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/title_commercial_shimmer_home_fragment"
        android:background="@drawable/background_shimmer_text" />

    <View
        android:id="@+id/viewpager_2_shimmer_commercial_home_fragment"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/viewpager_1_shimmer_commercial_home_fragment"
        android:layout_below="@+id/title_commercial_shimmer_home_fragment"
        android:background="@drawable/background_shimmer_text" />

</RelativeLayout>